// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/plugins /values-replace.js combined should replace values in declarations 1`] = `
".wooga {
    color: #F00;
    background: #F00;
    border: 1px solid #F00;
}"
`;

exports[`/plugins /values-replace.js composed values should replace values in declarations 1`] = `
".wooga {
    color: #F00;
}"
`;

exports[`/plugins /values-replace.js local values should replace value references in @value declarations 1`] = `
".wooga {
    color: red;
}"
`;

exports[`/plugins /values-replace.js local values should replace value references in @value declarations 2`] = `
".wooga {
    color: #F00;
}"
`;

exports[`/plugins /values-replace.js local values should replace values in declarations 1`] = `
".wooga {
    color: red;
}"
`;

exports[`/plugins /values-replace.js local values should replace values in media queries 1`] = `"@media (max-width: 599px) { }"`;

exports[`/plugins /values-replace.js local values should replace values surrounded by non-word characters (#245) 1`] = `
".a {
    height: calc(10px - 2px);
    width: -10px;
    color: twoodle;
}"
`;

exports[`/plugins /values-replace.js namespaced values should replace values in declarations 1`] = `
".wooga {
    color: #F00;
}"
`;

exports[`/plugins /values-replace.js should noop without values to replace 1`] = `".wooga { color: red; }"`;
